<resources>
    <string name="app_name">AuthenticateUsingSpring</string>
    <string name="user_login">User Login</string>
    <string name="enter_the_username">enter the username</string>
    <string name="enter_the_password">enter the password</string>
    <string name="login">login</string>
    <string name="new_user">new user ?</string>
    <string name="register_now">Register now</string>
    <string name="register">Register</string>
    <string name="enter_your_valid_email">enter your valid email address</string>
    <string name="enter_a_strong_password">enter a strong password</string>
    <string name="welcome">WELCOME</string>
    <string name="hello">Hello</string>
</resources>