<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:scaleType="fitXY"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:fontFamily="@font/roboto"
        android:text="@string/user_login"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_the_username"
        android:textSize="@dimen/sp_15"
        app:layout_constraintTop_toBottomOf="@id/tvUserLogin" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_the_password"
        android:inputType="textPassword"
        android:textSize="@dimen/sp_15"
        app:layout_constraintTop_toBottomOf="@id/etUserName" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@color/teal_200"
        android:fontFamily="@font/roboto"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <TextView
        android:id="@+id/tvNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:fontFamily="@font/roboto"
        android:text="@string/new_user"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sp_10"
        android:fontFamily="@font/roboto"
        android:text="@string/register_now"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNewUser" />

</androidx.constraintlayout.widget.ConstraintLayout>